uodate localhost to devdisplay...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,16 @@ jobs:
         run: |
           cat > src/util/configuration.js << 'EOF'
           export const configuration = {
-            db: '${{ secrets.VITE_DB }}',
-            db_user: '${{ secrets.VITE_DB_USER }}',
-            db_host: '${{ secrets.VITE_DB_HOST }}',
+            db: 'postgres',
+            db_user: 'postgres',
+            db_host: 'http://skraafoto.devdisplay.online',
             db_password: '${{ secrets.VITE_DB_PASSWORD }}',
-            db_port: '${{ secrets.VITE_DB_PORT }}',
-            api_baseurl: '${{ secrets.VITE_API_BASEURL }}',
+            db_port: '5432',
+            api_baseurl: 'https://api.dataforsyningen.dk/rest/skraafoto_api/v1.0',
             api_token: '${{ secrets.VITE_API_TOKEN }}',
             api_dhm_tokena: '${{ secrets.VITE_API_DHM_TOKENA }}',
             api_dhm_tokenb: '${{ secrets.VITE_API_DHM_TOKENB }}',
-            api_base_url: '${{ secrets.VITE_API_BASE_URL }}'
+            api_base_url: 'http://skraafoto.devdisplay.online'
           }
           EOF
 
