--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,14 +24,14 @@ jobs:
           export const configuration = {
             db: 'postgres',
             db_user: 'postgres',
-            db_host: 'http://skraafoto.devdisplay.online',
+            db_host: 'https://skraafoto.devdisplay.online',
             db_password: '${{ secrets.VITE_DB_PASSWORD }}',
             db_port: '5432',
             api_baseurl: 'https://api.dataforsyningen.dk/rest/skraafoto_api/v1.0',
             api_token: '${{ secrets.VITE_API_TOKEN }}',
             api_dhm_tokena: '${{ secrets.VITE_API_DHM_TOKENA }}',
             api_dhm_tokenb: '${{ secrets.VITE_API_DHM_TOKENB }}',
-            api_base_url: 'http://skraafoto.devdisplay.online'
+            api_base_url: 'https://skraafoto.devdisplay.online'
           }
           EOF
 
