--- a/.github/workflows/azure-sqlite-geopackage_skraafoto-plandata.yml
+++ b/.github/workflows/azure-sqlite-geopackage_skraafoto-plandata.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - skraafoto-plandata
 
 on:
@@ -14,25 +10,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
+      # ✅ Checkout source code and include LFS files
       - uses: actions/checkout@v4
+        with:
+          lfs: true
+          fetch-depth: 0
 
+      # ✅ Ensure Git LFS files (like .gpkg) are downloaded
+      - name: Pull LFS files
+        run: |
+          git lfs install
+          git lfs pull
+          ls -lh plandata.gpkg || echo "GeoPackage not found!"
+
+      # ✅ Setup Python
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      # 🛠️ Local Build Section (Optional)
-      # The following section in your workflow is designed to catch build issues early on the client side, before deployment. This can be helpful for debugging and validation. However, if this step significantly increases deployment time and early detection is not critical for your workflow, you may remove this section to streamline the deployment process.
-      - name: Create and Start virtual environment and Install dependencies
+      # ✅ Install dependencies (build check)
+      - name: Install dependencies
         run: |
           python -m venv antenv
           source antenv/bin/activate
+          pip install --upgrade pip
           pip install -r requirements.txt
-                
-      # By default, when you enable GitHub CI/CD integration through the Azure portal, the platform automatically sets the SCM_DO_BUILD_DURING_DEPLOYMENT application setting to true. This triggers the use of Oryx, a build engine that handles application compilation and dependency installation (e.g., pip install) directly on the platform during deployment. Hence, we exclude the antenv virtual environment directory from the deployment artifact to reduce the payload size. 
+
+      # ✅ Upload artifacts (skips virtualenv)
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
@@ -40,26 +48,23 @@ jobs:
           path: |
             .
             !antenv/
-
-      # 🚫 Opting Out of Oryx Build
-      # If you prefer to disable the Oryx build process during deployment, follow these steps:
-      # 1. Remove the SCM_DO_BUILD_DURING_DEPLOYMENT app setting from your Azure App Service Environment variables.
-      # 2. Refer to sample workflows for alternative deployment strategies: https://github.com/Azure/actions-workflow-samples/tree/master/AppService
-      
+            !.git/
+            !.github/
+            !__pycache__/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -67,10 +72,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_25BA7C8F94024606B904893E1FB72324 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DD74700945D346EBB597564674EA99FB }}
 
-      - name: 'Deploy to Azure Web App'
+      # ✅ Deploy to your Azure Web App
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'skraafoto-plandata'
           slot-name: 'Production'
-          
