--- a/.azureignore
+++ b/.azureignore
@@ -1,2 +1,12 @@
 plandata.gpkg
 plandata.gpkg.aux.xml
+antenv/
+__pycache__/
+*.pyc
+*.pyo
+*.gpkg
+*.gpkg.aux.xml
+node_modules/
+.git/
+.gitignore
+.vscode/
